# super_repo

anirudh_nav_stack/: CMakeLists.txt  package.xml
anirudh_nav_stack/include/anirudh_nav_stack/: controller.h  global_planner.h  local_planner.h  recovery_behavior.h
costmap_2d/include/costmap_2d/: costmap_2d_ros.h
costmap_2d/src/: costmap_2d_ros.cpp
gpafn/: CMakeLists.txt  gp_plugin.xml  package.xml
gpafn/include/gpafn/: gpafn.h  gpafn_ros.h  gpawin.h  potarr_point.h
gpafn/src/: gpafn.cpp  gpafn_node.cpp  gpafn_ros.cpp  gpatest.cpp  gpawin.cpp  read_pgm_costmap.cpp
gpafn/test/: CMakeLists.txt
local_planner_teb/: CMakeLists.txt  local_planner_plugin_teb.xml  package.xml
local_planner_teb/cfg/: TebLocalPlannerReconfigure.cfg
local_planner_teb/include/local_planner_teb/: costmap_model.h  distance_calculations.h  equivalence_relations.h  graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  misc.h  obstacles.h  odometry_helper_ros.h  optimal_planner.h  planner_interface.h  pose_se2.h  recovery_behaviors.h  robot_footprint_model.h  teb_config.h  teb_local_planner_ros.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
local_planner_teb/msg/: FeedbackMsg.msg  TrajectoryMsg.msg
local_planner_teb/src/: costmap_model.cpp  graph_search.cpp  homotopy_class_planner.cpp  obstacles.cpp  odometry_helper_ros.cpp  optimal_planner.cpp  recovery_behaviors.cpp  teb_config.cpp  teb_local_planner_ros.cpp  test_optim_node.cpp  timed_elastic_band.cpp  visualization.cpp
(+12 files in other folders)
